--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -6,7 +6,7 @@
 }
 
 body {
- 	background-color: var(--bg-color);
+ 	background-color: var(--bg-color) !important;
  	color: var(--body-color);
  	transition: color .6s, background-color .6s;
  	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
