Display post link

--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -15,6 +15,14 @@ body {
   line-height: 1.5;
 }
 
+body[data-theme="dark"] {
+	a:not(.button) {
+		&:hover {
+			color: #86bdf9;
+		}
+	}
+}
+
 a:not(.button) {
 	color: var(--link-color);
  	transition: opacity .2s;
